multiple updates for amazon linux 2023, including changes to logging, metadata access and S3 endpoint perms (for yum repos accesss)